# transformer-confidence

./: config.yaml  main.py  pyproject.toml  readme.md
notebooks/: prompt_generator.ipynb
old_code/: initial_test.ipynb  requirements.txt
old_code/data/: crt_confidence.csv
old_code/src/: data_loader.py
transformer_confidence/: requirements.txt
transformer_confidence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
transformer_confidence/data_loader/: bigbench_loader.py
transformer_confidence/experiment_runner/: experiment.py
transformer_confidence/nndif_client/: nndif_api.py
transformer_confidence/prompt_generator/: prompt_builder.py  prompt_templates.py
transformer_confidence/utils/: logger.py  storage.py
